# DSCoV-ModernPython

./: README.md  pyproject.toml
src/dragonsay/: cli.py
