[tool.poetry]
name = "dragonsay"
version = "0.1.0"
description = ""
authors = ["Paul Xu <yang_xu@brown.edu>"]
readme = "README.md"
packages = [{include = "dragonsay", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
cowsay = "^5.0"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
mypy = "^1.1.1"
pre-commit = "^3.2.2"
pytest = "^7.2.2"

[tool.poetry.scripts]
dragonsay = "dragonsay.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
